# pitchgrid-mapper

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  build_app.ps1  build_app.sh  create_installer.ps1  generate_icons_win.ps1  notes.md  pg_isomap.spec  pg_isomap_win.spec  pyproject.toml  run_dev.sh  sign_app.ps1  sign_installer.ps1
Installers/Windows/: PGIsomap.iss
controller_config/: ComputerKeyboard.yaml  Exquis.yaml  LaunchpadMiniMK3.yaml  LinnStrument128.yaml  Lumatone.yaml  Mossy.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  ControllerCanvas.svelte  Pad.svelte  TransformIcon.svelte  app.css
src/pg_isomap/: __init__.py  __main__.py  app.py  config.py  controller_config.py  desktop_app.py  midi_handler.py  midi_setup.py  osc_handler.py  tuning.py  web_api.py
src/pg_isomap/layouts/: __init__.py  base.py  isomorphic.py  piano_like.py  string_like.py
src/pg_isomap/layouts/scripts/: CalculateHexyTransforms.ipynb
