[project]
name = "pg-isomap"
version = "0.2.0"
description = "PitchGrid Isomorphic Controller Mapper - Universal microtonal scale mapper for isomorphic MIDI controllers"
authors = [
    {name = "PitchGrid", email = "info@pitchgrid.io"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-rtmidi>=1.5.8",
    "python-osc>=1.8.3",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pywebview>=5.0.0",
    "scalatrix @ git+https://github.com/peterjungx/scalatrix.git@06d484524b1ae69abf6558315f071a87e7470dad",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
build = [
    "pyinstaller>=6.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
pg-isomap = "pg_isomap.desktop_app:main"
pg-isomap-web = "pg_isomap.__main__:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
